styles.css
/* CSS Reset start, source: Josh W Comeau https://www.joshwcomeau.com/css/custom-css-reset/*/
/* ======================================= */
/* Set box sizing to always be "border-box" */
*,
*::before,
*::after {
  box-sizing: border-box;
}
/* Remove default margin */
*:not(dialog) {
  margin: 0;
}
/* Set form controls to inherit fonts */
input,
button,
textarea,
select {
  font: inherit;
}

/* ======================================= */
/* CSS Reset end */

body {
  height: 100vh;
  width: 100vw;
}

#layout-container {
  height: 100%;
  display: flex;
}

/* Sidebar start */
/* ======================================= */

#sidebar {
  width: 200px;
  flex: 1 6 auto;

  display: flex;
  flex-direction: column;
  justify-content: space-between;

  /* Sets the background of the sidebar, scaling the
  image to cover the sidebar, while preserving its ratio,
  at the smallest possible size. */
  background-image: url(images/halie-west-unsplash.jpg);
  background-size: cover;
  color: white;
}

#sidebar > #odin-heading {
  margin-top: 30px;
  padding: 10px;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;

  /* Make the black background 60% transparent. */
  background-color: rgba(0, 0, 0, 0.4);
}

#sidebar > #odin-heading > img {
  width: 60px;
  height: 85px;
}

#sidebar > p {
  margin-bottom: 15px;
  text-align: center;
}

/* ======================================= */
/* Sidebar end */

/* Main section start */
/* ======================================= */
#main-section {
  /* padding: 100px 30px; */
  width: 200px;
  flex: 6 1 auto;

  background-color: rgb(238, 238, 238);
}

#main-section > #main-heading {
  padding: 100px 30px 0px 30px;
}

#main-section > form > #form-field-section {
  margin: 40px 0px;
  padding: 20px 30px;

  background-color: white;
}

#main-section > form > #form-field-section > .form-row {
  display: flex;
  /* flex: auto; */
  justify-content: flex-start;

  gap: 60px;
  margin-top: 12px;
}

#main-section > form > #form-field-section > .form-row .field-label-pair {
  /* This will have the form labels appear above their 
  respective form control. */
  display: flex;
  flex-direction: column;
  flex: 0 1 auto;
  width: 280px;
  min-width: 0;
}

#main-section > form > button {
  margin: 0px 30px;
}

#main-section > p {
  margin: 20px 30px;
}
#main-section > p > span#log-in {
  color: #596d48;
}

/* ======================================= */
/* Main section end */

